
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef char* LPSTR ;


 int ARMADITO_EINVAL ;
 int ARMADITO_WHITE_LISTED ;
 char* ConvertDeviceNameToMsDosName (char*) ;
 int getchar () ;
 int printf (char*) ;
 int * strstr (char*,char*) ;

int main(int argc, char ** argv)
{
 char * msDosFilename = ((void*)0);
 int i = 0;
 LPSTR ArmaditoFile = "\\Device\\HarddiskVolume2\\ARMADITO.TXT";
 LPSTR BinaryFile = "\\Device\\HarddiskVolume2\\Malware.exe";
 LPSTR BinaryPOCFile = "\\Device\\HarddiskVolume2\\ARMADITO.TXT-ILoveJeromeNotin.exe";
 char *string;
 int scan_result = -1;



 for (i = 0; i < 3; i++)
 {
  if (i == 0)
  {
   printf("Scanning C:\\ARMADITO.txt\n");
   msDosFilename = ConvertDeviceNameToMsDosName(ArmaditoFile);
  }
  else if (i == 1)
  {
   printf("Scanning C:\\malware.exe\n");
   msDosFilename = ConvertDeviceNameToMsDosName(BinaryFile);
  }
  else
  {
   printf("Scanning C:\\ARMADITO.txt-ILoveJeromeNotin.exe\n");
   msDosFilename = ConvertDeviceNameToMsDosName(BinaryPOCFile);
  }


  if (msDosFilename == ((void*)0)) {

   scan_result = ARMADITO_EINVAL;
  }


  else if (strstr(msDosFilename, "ARMADITO.TXT") != ((void*)0)) {
   scan_result = ARMADITO_WHITE_LISTED;
   printf("This file is not suspicious. Since it contains ARMADITO.txt ........... \n");
  }
  else {

   printf("Armadito will now scan the file.\n");






  }

  printf("\n\n");
 }


 getchar();
 return 0;
}
